openslp/libslp/slp.h


typedef int SLPError;
#define  SLP_LAST_CALL              1
#define SLP_OK                      0
#define SLP_LANGUAGE_NOT_SUPPORTED  -1
#define SLP_PARSE_ERROR             -2
#define SLP_INVALID_REGISTRATION    -3
#define SLP_SCOPE_NOT_SUPPORTED     -4
#define SLP_AUTHENTICATION_ABSENT   -6
#define SLP_AUTHENTICATION_FAILED   -7
#define SLP_INVALID_UPDATE          -13
#define SLP_REFRESH_REJECTED        -15
#define SLP_NOT_IMPLEMENTED         -17
#define SLP_BUFFER_OVERFLOW         -18
#define SLP_NETWORK_TIMED_OUT       -19
#define SLP_NETWORK_INIT_FAILED     -20
#define SLP_MEMORY_ALLOC_FAILED     -21
#define SLP_PARAMETER_BAD           -22
#define SLP_NETWORK_ERROR           -23
#define SLP_INTERNAL_SYSTEM_ERROR   -24
#define SLP_HANDLE_IN_USE           -25
#define SLP_TYPE_ERROR              -26
typedef enum 
{
    SLP_FALSE = 0,
    SLP_TRUE = 1
} SLPBoolean;
typedef struct srvurl
{
    char *s_pcSrvType;
    char *s_pcHost;
    int   s_iPort;
    char *s_pcNetFamily;
    char *s_pcSrvPart;
} SLPSrvURL;
typedef void* SLPHandle;
typedef void SLPRegReport(SLPHandle hSLP,
                          SLPError errCode,
                          void *pvCookie);
typedef SLPBoolean SLPSrvTypeCallback(SLPHandle hSLP,
                                      const char* pcSrvTypes,
                                      SLPError errCode,
                                      void *pvCookie);
typedef SLPBoolean SLPSrvURLCallback(SLPHandle hSLP,
                                     const char* pcSrvURL,
                                     unsigned short sLifetime,
                                     SLPError errCode,
                                     void *pvCookie);
typedef SLPBoolean SLPAttrCallback(SLPHandle hSLP,
                                   const char* pcAttrList,
                                   SLPError errCode,
                                   void *pvCookie);
SLPError SLPOpen(const char *pcLang, SLPBoolean isAsync, SLPHandle *phSLP);
void SLPClose(SLPHandle hSLP);
SLPError SLPReg(SLPHandle   hSLP,
                const char  *pcSrvURL,
                const unsigned short usLifetime,
                const char  *pcSrvType,
                const char  *pcAttrs,
                SLPBoolean  fresh,
                SLPRegReport callback,
                void *pvCookie);
SLPError SLPDereg(SLPHandle  hSLP,
                  const char *pcSrvURL,
                  SLPRegReport callback,
                  void *pvCookie);
SLPError SLPDelAttrs(SLPHandle   hSLP,
                     const char  *pcSrvURL,
                     const char  *pcAttrs,
                     SLPRegReport callback,
                     void *pvCookie);
SLPError SLPFindSrvTypes(SLPHandle    hSLP,
                         const char  *pcNamingAuthority,
                         const char  *pcScopeList,
                         SLPSrvTypeCallback callback,
                         void *pvCookie);
SLPError SLPFindSrvs(SLPHandle  hSLP,
                     const char *pcServiceType,
                     const char *pcScopeList,
                     const char *pcSearchFilter,
                     SLPSrvURLCallback callback,
                     void *pvCookie);
SLPError SLPFindAttrs(SLPHandle   hSLP,
                      const char *pcURLOrServiceType,
                      const char *pcScopeList,
                      const char *pcAttrIds,
                      SLPAttrCallback callback,
                      void *pvCookie);
unsigned short SLPGetRefreshInterval();
SLPError SLPFindScopes(SLPHandle hSLP,
                       char** ppcScopeList);
SLPError SLPParseSrvURL(const char *pcSrvURL,
                        SLPSrvURL** ppSrvURL);
SLPError SLPEscape(const char* pcInbuf,
                   char** ppcOutBuf,
                   SLPBoolean isTag);
SLPError SLPUnescape(const char* pcInbuf,
                     char** ppcOutBuf,
                     SLPBoolean isTag);
void SLPFree(void* pvMem);
const char* SLPGetProperty(const char* pcName);
void SLPSetProperty(const char *pcName,
                    const char *pcValue);
SLPError SLPParseAttrs(const char* attrstr, 
                       const char* id,
                       int* valsize,
                       const char** val);